# fragma

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  index.html
.github/workflows/: ci.yml
shaders/: basic.wgsl  basic_compute.wgsl  basic_gamma_corrected.wgsl
src/: lib.rs  main.rs
src/app/: camera_controller.rs  input_state.rs  mod.rs
src/app/renderer/: assets.rs  camera.rs  context.rs  frame.rs  mod.rs  scene.rs  vertex.rs  viewport.rs
src/app/renderer/assets/: mod.rs  model.rs
src/app/renderer/resources/: material.rs  mesh.rs  mod.rs  model.rs  shader_data.rs  texture.rs  vertex.rs
src/renderer/: camera.rs  compute_object.rs  frame.rs  mod.rs  render_object.rs  scene.rs  utils.rs  viewport.rs
src/renderer/resources/: material.rs  mesh.rs  mod.rs  model.rs  shader.rs  shader_data.rs  texture.rs  vertex.rs
src/renderer/resources/material/: compute_material.rs  mod.rs  render_material.rs
