[package]
name = "fragma"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = { version = "1.19.0", features = ["derive"]}
cfg-if = "1.0.0"
color-eyre = "0.6.3"
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3.0"
wgpu = "22.1.0"
winit = { version = "0.29.15", features = ["rwh_05"] }

[dependencies.image]
version = "0.25.2"
default-features = false
features = ["jpeg", "png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wgpu = { version = "22.1.0", features = ["webgl"]}
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
web-sys = { version = "0.3.72", features = ["Document", "Window", "Element"]}
